--- a/style.css
+++ b/style.css
@@ -1,8 +1,119 @@
-h1 {
-    color: red;
-    font-size: 50px;
+.background {
+    width: 100%;
+    height: 100vh;
+    background-image: url(50511011681_aa6b5e8f3d_o.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    filter: blur(0.5px);
 }
-body {
-    background-color: lightblue;
-    background-image: link;
+.content {
+    margin-top: -8px;
+    margin-left: -8px;
+    background-color: pink;
+    display: flex;
+    text-align: center;
+    position: fixed;
+    z-index: 99;
+}
+.content #logo {
+    width: 80px;
+    height: 80px;
+}
+.content #tittle {
+    width: 0px;
+    height: 0px;
+}
+#head h1 {
+    color: white;
+    font-size: 32px;
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 20px;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    position: fixed;
+    z-index: 9;
+    background: rgba(255, 192, 203, 0.4);
+    backdrop-filter: blur(4px);
+}
+.content1 {
+    color: lightpink;
+    text-align: left;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.content1 h1 {
+    margin-top: 60px;
+    padding-top: 40px;
+}
+.grid-album {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 5px;
+    padding: 5px;
+}
+.grid-album .album {
+    display: flex;
+    justify-content: center;
+    padding: 5px;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: transform 0.3s;
+}
+.grid-album .album:hover {
+    transform: scale(1.07); /* Hiệu ứng nổi */
+}
+.album img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+ul {
+    height: 2000px;
+}
+#video {
+    margin-top: 100px;
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: -450px; /* Sidebar ẩn ban đầu */
+    width: 400px;
+    height: 100%;
+    background: rgba(255, 192, 203, 0.4);
+    backdrop-filter: blur(4px);
+    padding: 20px;
+    transition: right 0.7s ease-in-out; /* Hiệu ứng chuyển đổi */
+    z-index: 20;
+}
+
+/* CSS cho nút menu */
+#menuButton {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background: rgba(255, 192, 203, 0.4);
+    backdrop-filter: blur(4px);
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 100;
+}
+ul {
+    height: 2000px;
+}
+.menu-visible #menuButton {
+    right: 330px; /* Di chuyển nút menu khi thanh bên hiển thị */
 }
